design, fix: redesign overall, disable scroll bar and overflow

--- a/src/App.css
+++ b/src/App.css
@@ -3,8 +3,8 @@
 @tailwind utilities;
 
 body {
-  padding: 0;
-  margin: 0;
+  overflow-y: hidden; /* Hide vertical scrollbar */
+  overflow-x: hidden; /* Hide horizontal scrollbar */
 }
 
 body::-webkit-scrollbar {
